--- a/configs/ddim.yaml
+++ b/configs/ddim.yaml
@@ -1,3 +1,5 @@
+use_ddim: True
+
 DEBUG: False
 wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
 project_name: dl-hw5
@@ -9,7 +11,7 @@ data_dir: ./data
 image_size: 128
 # batch_size: #BATCH_SIZE 
 num_workers: 4 #NUM_WORKERS
-# num_classes: #NUM_CLASSES
+num_classes: 10 #NUM_CLASSES
 num_epochs: 2 #NUM_EPOCHS
 # learning_rate: #LR
 # weight_decay: #WD
