--- a/configs/ddpm.yaml
+++ b/configs/ddpm.yaml
@@ -5,16 +5,17 @@ run_name: test
 
 seed: 42
 dataset: cifar10 #test
+subset: 0.05
 data_dir: ./data
 image_size: 128
 # batch_size: #BATCH_SIZE 
 num_workers: 4 #NUM_WORKERS
 # num_classes: #NUM_CLASSES
-num_epochs: 5 #NUM_EPOCHS
-# learning_rate: #LR
+num_epochs: 100 #NUM_EPOCHS
+learning_rate: 5e-5 #LR
 # weight_decay: #WD
-num_train_timesteps: 100 #TRAINING_TIMESTEPS
-num_inference_steps: 50 #INFERENCE_TIMESTEPS
+num_train_timesteps: 1000 #TRAINING_TIMESTEPS
+num_inference_steps: 200 #INFERENCE_TIMESTEPS
 # beta_start: #BETA START
 # beta_end: #BETA END
 # beta_schedule: #BETA SCHEDULE
