--- a/configs/ddpm.yaml
+++ b/configs/ddpm.yaml
@@ -1,31 +1,27 @@
-DEBUG: False
-wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
-project_name: dl-hw5
-run_name: cifar10-test
-
 seed: 42
-dataset: cifar10 #test
-data_dir: ./data
-subset: 1.0
-image_size: 128
-# batch_size: #BATCH_SIZE 
-num_workers: 4 #NUM_WORKERS
-# num_classes: #NUM_CLASSES
-num_epochs: 10 #NUM_EPOCHS
-learning_rate: 1e-4 #LR
-# weight_decay: #WD
-num_train_timesteps: 100 #TRAINING_TIMESTEPS
-num_inference_steps: 100 #INFERENCE_TIMESTEPS
-# beta_start: #BETA START
-# beta_end: #BETA END
-# beta_schedule: #BETA SCHEDULE
+data_dir: Data/
+num_workers: 4
+num_classes: 100
+weight_decay: 0.0001
+beta_start: 0.0002
+beta_end: 0.02
+beta_schedule: linear
 
 variance_type: fixed_small
 predictor_type: epsilon
-unet_in_size: 128
 unet_in_ch: 3
-unet_ch: 128
 unet_num_res_blocks: 2
 unet_ch_mult: [1, 2, 2, 4]
 unet_attn: [2, 3]
 unet_dropout: 0.0
+
+use_CIFAR: False
+run_name: ddpm
+batch_size: 32
+image_size: 64
+unet_in_size: 64
+unet_ch: 128
+num_train_timesteps: 128
+num_inference_steps: 128
+learning_rate: 2e-4
+num_epochs: 16
