--- a/configs/ddim.yaml
+++ b/configs/ddim.yaml
@@ -1,32 +1,41 @@
-use_ddim: True
+seed: 42
 
-DEBUG: False
+# dataset
+data_dir: /jet/home/ikong/hw5/data
+image_size: 64
+num_classes: 100
+
+# training
+batch_size: 32
+num_workers: 4
+num_epochs: 1
+
+# optimizer
+learning_rate: 2e-4
+weight_decay: 0.0001
+
+# wandb
 wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
 project_name: dl-hw5
-run_name: test
+run_name: ddim-128-128-2e4
 
-seed: 42
-dataset: cifar10 #test
-data_dir: ./data
-image_size: 128
-# batch_size: #BATCH_SIZE 
-num_workers: 4 #NUM_WORKERS
-# num_classes: #NUM_CLASSES
-num_epochs: 5 #NUM_EPOCHS
-# learning_rate: #LR
-# weight_decay: #WD
-num_train_timesteps: 100 #TRAINING_TIMESTEPS
-num_inference_steps: 50 #INFERENCE_TIMESTEPS
-# beta_start: #BETA START
-# beta_end: #BETA END
-# beta_schedule: #BETA SCHEDULE
-
-variance_type: fixed_small
-predictor_type: epsilon
-unet_in_size: 128
+# unet
+unet_in_size: 64
 unet_in_ch: 3
 unet_ch: 128
-unet_num_res_blocks: 2
 unet_ch_mult: [1, 2, 2, 4]
 unet_attn: [2, 3]
+unet_num_res_blocks: 2
 unet_dropout: 0.0
+
+# diffusion
+num_train_timesteps: 128
+num_inference_steps: 128
+beta_start: 0.0002
+beta_end: 0.02
+beta_schedule: linear
+variance_type: fixed_small
+predictor_type: epsilon
+use_ddim: True
+
+
