--- a/configs/ddpm.yaml
+++ b/configs/ddpm.yaml
@@ -1,27 +1,41 @@
 seed: 42
-data_dir: Data/
-num_workers: 4
+
+# dataset
+data_dir: /jet/home/ikong/hw5/data
+image_size: 64
 num_classes: 100
+
+# training
+batch_size: 32
+num_workers: 4
+num_epochs: 1
+
+# optimizer
+learning_rate: 2e-4
 weight_decay: 0.0001
+
+# wandb
+wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
+project_name: dl-hw5
+run_name: ddpm
+
+# unet
+unet_in_size: 64
+unet_in_ch: 3
+unet_ch: 128
+unet_ch_mult: [1, 2, 2, 4]
+unet_attn: [2, 3]
+unet_num_res_blocks: 2
+unet_dropout: 0.0
+
+# diffusion
+num_train_timesteps: 128
+num_inference_steps: 128
 beta_start: 0.0002
 beta_end: 0.02
 beta_schedule: linear
-
 variance_type: fixed_small
 predictor_type: epsilon
-unet_in_ch: 3
-unet_num_res_blocks: 2
-unet_ch_mult: [1, 2, 2, 4]
-unet_attn: [2, 3]
-unet_dropout: 0.0
 
-use_CIFAR: False
-run_name: ddpm
-batch_size: 32
-image_size: 64
-unet_in_size: 64
-unet_ch: 128
-num_train_timesteps: 128
-num_inference_steps: 128
-learning_rate: 2e-4
-num_epochs: 16
+
+
