--- a/configs-baseline/ddim.yaml
+++ b/configs-baseline/ddim.yaml
@@ -36,6 +36,7 @@ beta_end: 0.02
 beta_schedule: linear
 variance_type: fixed_small
 predictor_type: epsilon
-use_ddim: True
 
+# improvement
+use_ddim: True
 
