--- a/configs/ddpm.yaml
+++ b/configs/ddpm.yaml
@@ -12,7 +12,7 @@ num_classes: 100
 # training
 batch_size: 32
 num_workers: 4
-num_epochs: 10
+num_epochs: 5
 
 # optimizer
 learning_rate: 2e-4
@@ -26,7 +26,7 @@ weight_decay: 1e-4
 # Ivy wandb
 wandb_key: dbcb5b22a7512074ad91148adc5794d1955289ad
 project_name: IDL-hw5-Ivy
-run_name: ddpm-cfg-epoch10
+run_name: ddim-cfg-epoch5-Baseline
 
 # unet
 unet_in_size: 64
@@ -50,4 +50,13 @@ predictor_type: epsilon
 use_cfg: True
 cfg_guidance_scale: 3.0
 cond_drop_rate: 0.1
+
+#latent
+latent_ddpm: False
+
+use_ddim: True
+
+#evaluation during training
+eval_during_train: True
+eval_every_n_epoch: 1 # it takes 10 min to generate 500 images for evaluation each time
 
