config args.cond_drop_rate in inference

--- a/configs/ddpm.yaml
+++ b/configs/ddpm.yaml
@@ -1,9 +1,8 @@
 seed: 42
 
 # dataset
-#data_dir: /jet/home/ikong/hw5/data
-data_dir: /jet/home/ygao8/11785-hw5/data
-val_data_dir: /jet/home/ygao8/11785-hw5/data/imagenet100_128x128/validation
+data_dir: /jet/home/ikong/hw5/data/
+val_data_dir: /jet/home/ikong/hw5/data/imagenet100_128x128/validation
 dataset: imagenet100
 subset: 1
 image_size: 64
@@ -12,7 +11,7 @@ num_classes: 100
 # training
 batch_size: 32
 num_workers: 4
-num_epochs: 5
+num_epochs: 1
 
 # optimizer
 learning_rate: 2e-4
@@ -24,9 +23,9 @@ weight_decay: 1e-4
 # run_name: ddim-timestep(1000,100)-epoch(5)
 
 # Ivy wandb
-wandb_key: dbcb5b22a7512074ad91148adc5794d1955289ad
-project_name: IDL-hw5-Ivy
-run_name: ddim-cfg-epoch5-Baseline
+wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
+project_name: dl-hw5
+run_name: latent-test
 
 # unet
 unet_in_size: 64
@@ -46,17 +45,18 @@ beta_schedule: linear
 variance_type: fixed_small
 predictor_type: epsilon
 
+# ddim
+use_ddim: True
+
 # cfg
-use_cfg: True
+use_cfg: False
 cfg_guidance_scale: 3.0
 cond_drop_rate: 0.1
 
 #latent
-latent_ddpm: False
-
-use_ddim: True
+latent_ddpm: True
 
 #evaluation during training
-eval_during_train: True
+eval_during_train: False
 eval_every_n_epoch: 1 # it takes 10 min to generate 500 images for evaluation each time
 
