--- a/configs/ddpm.yaml
+++ b/configs/ddpm.yaml
@@ -1,9 +1,9 @@
 seed: 42
 
 # dataset
+dataset: imagenet100
 data_dir: /jet/home/ikong/hw5/data/
 val_data_dir: /jet/home/ikong/hw5/data/imagenet100_128x128/validation
-dataset: imagenet100
 subset: 1
 image_size: 64
 num_classes: 100
@@ -17,7 +17,7 @@ num_epochs: 1
 learning_rate: 2e-4
 weight_decay: 1e-4
 
-# wandb
+# Isla wandb
 # wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
 # project_name: dl-hw5
 # run_name: ddim-timestep(1000,100)-epoch(5)
@@ -26,6 +26,11 @@ weight_decay: 1e-4
 wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
 project_name: dl-hw5
 run_name: latent-test
+
+# # Bryan wandb
+# wandb_key: 2e236a3f67726acb3dd528ffcda489a4f92f5457
+# project_name: dl-hw5
+# run_name: ddpm-epoch5-Baseline-Bryan-run1
 
 # unet
 unet_in_size: 64
@@ -36,7 +41,7 @@ unet_attn: [2, 3]
 unet_num_res_blocks: 2
 unet_dropout: 0.0
 
-# diffusion
+# ddpm
 num_train_timesteps: 1000
 num_inference_steps: 1000
 beta_start: 0.0002
@@ -45,16 +50,19 @@ beta_schedule: linear
 variance_type: fixed_small
 predictor_type: epsilon
 
-# ddim
-use_ddim: True
+#latent
+latent_ddpm: True
 
 # cfg
 use_cfg: False
 cfg_guidance_scale: 3.0
 cond_drop_rate: 0.1
 
-#latent
-latent_ddpm: True
+# ddim
+use_ddim: True
+
+# checkpoint
+keep_last_n: 10
 
 #evaluation during training
 eval_during_train: False
