--- a/configs/ddpm-isla.yaml
+++ b/configs/ddpm-isla.yaml
@@ -22,7 +22,7 @@ weight_decay: 1e-4
 # Isla wandb
 wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
 project_name: dl-hw5
-run_name: ddpm-adagn_resnet
+run_name: ddim-cfg-adagn
 
 # # Ivy wandb
 # wandb_key: dbcb5b22a7512074ad91148adc5794d1955289ad
@@ -42,8 +42,8 @@ unet_ch_mult: [1, 2, 2, 4]
 unet_attn: [2, 3]
 unet_num_res_blocks: 2
 unet_dropout: 0.0
-use_adagn_resblock: True
-use_transformer_bottleneck: False
+use_adagn_resblock: False
+use_transformer_bottleneck: True
 transformer_depth: 1
 transformer_num_heads: 8
 
@@ -65,7 +65,7 @@ cfg_guidance_scale: 3.0
 cond_drop_rate: 0.1
 
 # ddim
-use_ddim: False
+use_ddim: True
 
 # checkpoint
 keep_last_n: 1 # including the last one
