--- a/configs/ddpm-isla.yaml
+++ b/configs/ddpm-isla.yaml
@@ -7,14 +7,14 @@ output_dir: /workspace/experiments/
 dataset: imagenet100
 data_dir: /root/hw5/data
 val_data_dir: /root/hw5/data/imagenet100_128x128/validation
-subset: 1.0
+subset: 0.1
 image_size: 64
 num_classes: 100
 
 # training
 batch_size: 64
 num_workers: 4
-num_epochs: 50
+num_epochs: 5
 
 # optimizer
 warmup_epochs: 5
@@ -26,12 +26,12 @@ weight_decay: 1e-4
 wandb_username: islakong-carnegie-mellon-university
 wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
 project_name: dl-hw5
-run_name: ddpm(cosine)-vae-cfg-lr(1e-4)
+run_name: test-ddpm(cosine)-vae-cfg-lr(1e-4)
 
 # # resume wandb
 # resume: True
-# wandb_resume_id: "fx31fo45"
-# resume_checkpoint_path: "/workspace/experiments/exp-6-ddpm(cosine)-vae-cfg-lr(1e-4)/checkpoints/checkpoint_epoch_0.pth"
+# wandb_resume_id: "jrqn6d2y"
+# resume_checkpoint_path: "/workspace/experiments/exp-4-test-ddpm(cosine)-vae-cfg-lr(1e-4)/checkpoints/checkpoint_epoch_0.pth"
 
 # # Ivy wandb
 # wandb_key: dbcb5b22a7512074ad91148adc5794d1955289ad
