fix the ckpt load of lr scheduler

--- a/configs/ddpm-isla.yaml
+++ b/configs/ddpm-isla.yaml
@@ -7,14 +7,14 @@ output_dir: /workspace/experiments/
 dataset: imagenet100
 data_dir: /root/hw5/data
 val_data_dir: /root/hw5/data/imagenet100_128x128/validation
-subset: 0.1
+subset: 1.0
 image_size: 64
 num_classes: 100
 
 # training
 batch_size: 64
 num_workers: 4
-num_epochs: 5
+num_epochs: 50
 
 # optimizer
 warmup_epochs: 5
@@ -26,12 +26,12 @@ weight_decay: 1e-4
 wandb_username: islakong-carnegie-mellon-university
 wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
 project_name: dl-hw5
-run_name: test-ddpm(cosine)-vae-cfg-lr(1e-4)
+run_name: ddpm(cosine)-ddim(500)-vae-cfg(transformer)-lr(1e-4)
 
-# # resume wandb
-# resume: True
-# wandb_resume_id: "jrqn6d2y"
-# resume_checkpoint_path: "/workspace/experiments/exp-4-test-ddpm(cosine)-vae-cfg-lr(1e-4)/checkpoints/checkpoint_epoch_0.pth"
+# resume wandb
+resume: True
+wandb_resume_id: "qtin91b3"
+resume_checkpoint_path: "/workspace/experiments/exp-9-ddpm(cosine)-ddim(500)-vae-cfg(transformer)-lr(1e-4)/checkpoints/checkpoint_epoch_16.pth"
 
 # # Ivy wandb
 # wandb_key: dbcb5b22a7512074ad91148adc5794d1955289ad
@@ -65,7 +65,7 @@ unet_attn: [2, 3] # -> [1, 2]
 unet_num_res_blocks: 2
 unet_dropout: 0.0
 use_adagn_resblock: False
-use_transformer_bottleneck: False
+use_transformer_bottleneck: True
 transformer_depth: 1
 transformer_num_heads: 8
 
@@ -83,7 +83,7 @@ vae_config:
 
 # ddpm
 num_train_timesteps: 1000
-num_inference_steps: 1000
+num_inference_steps: 500
 beta_start: 0.0002
 beta_end: 0.02
 beta_schedule: cosine
@@ -99,7 +99,7 @@ cfg_guidance_scale: 3.0
 cond_drop_rate: 0.1
 
 # ddim
-use_ddim: False
+use_ddim: True
 
 # checkpoint
 keep_last_n: 1 # including the last one
