--- a/configs/ddpm-isla.yaml
+++ b/configs/ddpm-isla.yaml
@@ -14,7 +14,7 @@ num_classes: 100
 # training
 batch_size: 64
 num_workers: 6
-num_epochs: 10
+num_epochs: 20
 
 # optimizer
 warmup_epochs: 5
@@ -26,12 +26,12 @@ weight_decay: 1e-4
 wandb_username: islakong-carnegie-mellon-university
 wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
 project_name: dl-hw5
-run_name: unet(256,1-2-4-8,1-2,3),transformer*2
+run_name: unet(192,1-2-2-4,2-3,2),transformer*1
 
 # # resume wandb
 # resume: True
-# wandb_resume_id: "qxjhivvj"
-# resume_checkpoint_path: "/workspace/experiments/exp-8-ddpm(cosine)-ddim(500)-vae-cfg(transformer*2)-lr(1e-4)/checkpoints/checkpoint_epoch_0.pth"
+# wandb_resume_id: "a37q8h4k"
+# resume_checkpoint_path: "/workspace/experiments/exp-6-unet(192,1-2-4-8,0-1-2,3),transformer*2/checkpoints/checkpoint_epoch_0.pth"
 
 # # Ivy wandb
 # wandb_key: dbcb5b22a7512074ad91148adc5794d1955289ad
@@ -59,14 +59,14 @@ run_name: unet(256,1-2-4-8,1-2,3),transformer*2
 # vae unet
 unet_in_size: 16
 unet_in_ch: 3
-unet_ch: 256
-unet_ch_mult: [1, 2, 4, 8]
-unet_attn: [1, 2]
-unet_num_res_blocks: 3
+unet_ch: 192
+unet_ch_mult: [1, 2, 2, 4]
+unet_attn: [2, 3]
+unet_num_res_blocks: 2
 unet_dropout: 0.1
 use_adagn_resblock: False
 use_transformer_bottleneck: True
-transformer_depth: 2
+transformer_depth: 1
 transformer_num_heads: 8
 
 vae_config:
