--- a/configs/ddpm-isla.yaml
+++ b/configs/ddpm-isla.yaml
@@ -7,17 +7,17 @@ dataset: imagenet100
 data_dir: /jet/home/ikong/hw5/data
 val_data_dir: /jet/home/ikong/hw5/data/imagenet100_128x128/validation
 subset: 1.0
-image_size: 64
+image_size: 128
 num_classes: 100
 
 # training
 batch_size: 64
 num_workers: 6
-num_epochs: 50
+num_epochs: 200
 
 # optimizer
-warmup_epochs: 5
-max_epochs: 50
+warmup_epochs: 10
+max_epochs: 300
 learning_rate: 1e-4
 weight_decay: 1e-4
 
@@ -25,12 +25,12 @@ weight_decay: 1e-4
 wandb_username: islakong-carnegie-mellon-university
 wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
 project_name: dl-hw5
-run_name: unet(192,1-2-2-4,2-3,3)
+run_name: unet(192,1-2-2-4,2-3,3)-transformer(2,2)
 
-# # resume wandb
-# resume: True
-# wandb_resume_id: "nnvjrm59"
-# resume_checkpoint_path: "/jet/home/ikong/hw5/experiments/exp-4-unet(192,1-2-2-4,2-3,3),transformer(2,2)/checkpoints/checkpoint_epoch_49.pth"
+# resume wandb
+resume: True
+wandb_resume_id: "jbh8gv3u"
+resume_checkpoint_path: "/jet/home/ikong/hw5/experiments/exp-2-unet(192,1-2-2-4,2-3,3)-transformer(2,2)/checkpoints/checkpoint_epoch_41.pth"
 
 # # Ivy wandb
 # wandb_key: dbcb5b22a7512074ad91148adc5794d1955289ad
@@ -56,7 +56,7 @@ run_name: unet(192,1-2-2-4,2-3,3)
 # transformer_num_heads: 8
 
 # vae unet
-unet_in_size: 16
+unet_in_size: 32
 unet_in_ch: 3
 unet_ch: 192
 unet_ch_mult: [1, 2, 2, 4]
@@ -64,7 +64,7 @@ unet_attn: [2, 3]
 unet_num_res_blocks: 3
 unet_dropout: 0.1
 use_adagn_resblock: False
-use_transformer_bottleneck: False
+use_transformer_bottleneck: True
 transformer_depth: 2
 transformer_num_heads: 2
 
@@ -111,7 +111,7 @@ eval_samples: 500 # 500
 eval_classes: 50 # 50
 
 # # inference
-# ckpt: "/jet/home/ikong/hw5/experiments/exp-4-unet(192,1-2-2-4,2-3,3),transformer(2,2)/checkpoints/checkpoint_epoch_49.pth"
+# ckpt: "/jet/home/ikong/hw5/experiments/exp-1-unet(192,1-2-2-4,2-3,3)/checkpoints/checkpoint_epoch_49.pth"
 # inference_samples: 5000
 
 # 57.44, IS: 5.46 ± 0.19
