--- a/configs/ddpm-isla2.yaml
+++ b/configs/ddpm-isla2.yaml
@@ -25,12 +25,12 @@ weight_decay: 1e-4
 wandb_username: islakong-carnegie-mellon-university
 wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
 project_name: dl-hw5
-run_name: 128-unet-vae(train10,kl0.0005,lpips1.0,vae0.05)-cfg-trans
+run_name: test
 
-# resume wandb
-resume: True
-wandb_resume_id: "dpuac806"
-resume_checkpoint_path: "/jet/home/ikong/hw5/experiments/exp-1-128-unet-trans-vae(train10,kl0.0005,lpips1.0,vae0.05)-cfg/checkpoints/checkpoint_epoch_29.pth"
+# # resume wandb
+# resume: True
+# wandb_resume_id: "dpuac806"
+# resume_checkpoint_path: "/jet/home/ikong/hw5/experiments/exp-1-128-unet-trans-vae(train10,kl0.0005,lpips1.0,vae0.05)-cfg/checkpoints/checkpoint_epoch_29.pth"
 
 # # Ivy wandb
 # wandb_key: dbcb5b22a7512074ad91148adc5794d1955289ad
@@ -42,42 +42,42 @@ resume_checkpoint_path: "/jet/home/ikong/hw5/experiments/exp-1-128-unet-trans-va
 # project_name: dl-hw5
 # run_name: ddpm-epoch5-Baseline-Bryan-run1
 
-# # unet
-# unet_in_size: 64
-# unet_in_ch: 3
-# unet_ch: 128
-# unet_ch_mult: [1, 2, 2, 4]
-# unet_attn: [2, 3]
-# unet_num_res_blocks: 2
-# unet_dropout: 0.0
-# use_adagn_resblock: False
-# use_transformer_bottleneck: False
-# transformer_depth: 1
-# transformer_num_heads: 8
-
-# vae unet
-unet_in_size: 32
+# unet
+unet_in_size: 128
 unet_in_ch: 3
-unet_ch: 192
+unet_ch: 128
 unet_ch_mult: [1, 2, 2, 4]
 unet_attn: [2, 3]
-unet_num_res_blocks: 3
-unet_dropout: 0.1
+unet_num_res_blocks: 2
+unet_dropout: 0.0
 use_adagn_resblock: False
-use_transformer_bottleneck: True
-transformer_depth: 4
+use_transformer_bottleneck: False
+transformer_depth: 1
 transformer_num_heads: 8
 
-vae_config:
-  double_z: True
-  z_channels: 3
-  embed_dim: 3
-  resolution: 256
-  in_channels: 3
-  out_ch: 3
-  ch: 128
-  ch_mult: [1, 2, 4]
-  num_res_blocks: 2
+# # vae unet
+# unet_in_size: 32
+# unet_in_ch: 3
+# unet_ch: 192
+# unet_ch_mult: [1, 2, 2, 4]
+# unet_attn: [2, 3]
+# unet_num_res_blocks: 3
+# unet_dropout: 0.1
+# use_adagn_resblock: False
+# use_transformer_bottleneck: True
+# transformer_depth: 4
+# transformer_num_heads: 8
+
+# vae_config:
+#   double_z: True
+#   z_channels: 3
+#   embed_dim: 3
+#   resolution: 256
+#   in_channels: 3
+#   out_ch: 3
+#   ch: 128
+#   ch_mult: [1, 2, 4]
+#   num_res_blocks: 2
 
 # ddpm
 num_train_timesteps: 1000
@@ -89,14 +89,14 @@ variance_type: fixed_small
 predictor_type: epsilon
 
 # latent
-latent_ddpm: True
+latent_ddpm: False
 freeze_vae_epoch: 10
 kl_beta: 0.0005
 lpips_lambda: 1.0
 vae_lambda: 0.5
 
 # cfg
-use_cfg: True
+use_cfg: False
 cfg_guidance_scale: 3.0
 cond_drop_rate: 0.1
 
