--- a/configs/ddpm-bryan.yaml
+++ b/configs/ddpm-bryan.yaml
@@ -1,52 +1,91 @@
 seed: 42
 
+DEBUG: False
+output_dir: /workspace/experiments
+
 # dataset
 dataset: imagenet100
-data_dir: /root/hw5/data
-val_data_dir: /root/hw5/data/imagenet100_128x128/validation
+data_dir: /workspace/data
+val_data_dir: /workspace/data/imagenet100_128x128/validation
 subset: 1.0
-image_size: 64
+image_size: 128
 num_classes: 100
 
 # training
-batch_size: 32
-num_workers: 4
-num_epochs: 5
+batch_size: 64
+num_workers: 16
+num_epochs: 100
+# mixed_precision: bf16
 
 # optimizer
-learning_rate: 2e-4
+warmup_epochs: 10
+max_epochs: 100
+learning_rate: 5e-5
 weight_decay: 1e-4
 
-# Isla wandb
-wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
-project_name: dl-hw5
-run_name: ddpm-unet_ch192
+# # Isla wandb
+# wandb_key: b6dff554fc854aea97af8dccb735c241a19a6615
+# project_name: dl-hw5
+# run_name: ddpm-unet_ch192
 
 # # Ivy wandb
 # wandb_key: dbcb5b22a7512074ad91148adc5794d1955289ad
 # project_name: IDL-hw5-Ivy
 # run_name: ddim-cfg-epoch5-Baseline
 
-# # Bryan wandb
-# wandb_key: 2e236a3f67726acb3dd528ffcda489a4f92f5457
-# project_name: dl-hw5
-# run_name: ddpm-epoch5-Baseline-Bryan-run1
+# Bryan wandb
+wandb_key: 2e236a3f67726acb3dd528ffcda489a4f92f5457
+project_name: dl-hw5
+run_name: ddpm-200epochs
+
+# # resume wandb
+# resume: True
+# wandb_resume_id: "jbh8gv3u"
+# resume_checkpoint_path: "/jet/home/btan2/hw5/11785-hw5/experiments/exp-2-unet(192,1-2-2-4,2-3,3)-transformer(2,2)/checkpoints/checkpoint_epoch_30.pth"
 
 # unet
-unet_in_size: 64
+unet_in_size: 128
 unet_in_ch: 3
-unet_ch: 192
+unet_ch: 128
 unet_ch_mult: [1, 2, 2, 4]
 unet_attn: [2, 3]
 unet_num_res_blocks: 2
 unet_dropout: 0.0
+use_adagn_resblock: False
+use_transformer_bottleneck: False
+transformer_depth: 1
+transformer_num_heads: 8
+
+# # vae unet
+# unet_in_size: 32
+# unet_in_ch: 3
+# unet_ch: 192
+# unet_ch_mult: [1, 2, 2, 4]
+# unet_attn: [2, 3]
+# unet_num_res_blocks: 3
+# unet_dropout: 0.1
+# use_adagn_resblock: False
+# use_transformer_bottleneck: True
+# transformer_depth: 2
+# transformer_num_heads: 2
+
+# vae_config:
+#   double_z: True
+#   z_channels: 3
+#   embed_dim: 3
+#   resolution: 256
+#   in_channels: 3
+#   out_ch: 3
+#   ch: 128
+#   ch_mult: [1, 2, 4]
+#   num_res_blocks: 2
 
 # ddpm
 num_train_timesteps: 1000
 num_inference_steps: 1000
 beta_start: 0.0002
 beta_end: 0.02
-beta_schedule: linear
+beta_schedule: cosine
 variance_type: fixed_small
 predictor_type: epsilon
 
@@ -68,9 +107,10 @@ keep_best_model: False
 
 #evaluation during training
 eval_during_train: True
-eval_every_n_epoch: 5 # it takes 10 min to generate 500 images for evaluation each time
+eval_every_n_epoch: 10 # it takes 10 min to generate 500 images for evaluation each time
 eval_samples: 500 # 500
 eval_classes: 50 # 50
 
 # inference
+ckpt: "/workspace/experiments/exp-0-ddpm-200epochs/checkpoints/checkpoint_epoch_63.pth"
 inference_samples: 5000
